2004-11-05  Link Dupont  <link.dupont@gmail.com>

	* platform.pl.in: Added archlinux to the list
	* users-conf.in: added support for archlinux 0.7

2004-11-04  Carlos Garnacho Parro  <carlosg@gnome.org>

	* file.pl.in (gst_file_buffer_load): return a void array instead of
	undef if the file doesn't exist, it can be filled later. Fixes
	#157331

2004-11-03  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1

2004-11-01  Carlos Garcia Campos <carlosgc@gnome.org>

	* disks-conf.in: fixed floppy drive detection

2004-10-25  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Makefile.am: delete the correct intltool-* files when making clean

2004-10-25  Mohammad DAMT  <mdamt@bisnisweb.com>

	* configure.in: Added "id" (Indonesian) to ALL_LINGUAS
	* po/id.po: Added Indonesian translation

2004-10-17  Marcel Telka  <marcel@telka.sk>

	* configure.in (ALL_LINGUAS): Added sk.

2004-09-29  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "tr" to ALL_LINGUAS.

2004-09-28  Alexander Shopov  <ash@contact.bg>

	* configure.in (ALL_LINGUAS): Added "bg" (Bulgarian)

2004-09-19  Alessio Frusciante  <algol@firenze.linux.it>

	* configure.in: added "it" (Italian) to ALL_LINGUAS.

2004-09-18  Carlos Garcia Campos <carlosgc@gnome.org>

	* disks-conf.in: removed the report messages merged with the xml
	output in disk_info directive

2004-09-14  Carlos Garcia Campos <carlosgc@gnome.org>

	* disks-conf.in: added format partition directive
	
	* partition.pl.in: moved some code from disks-conf.in to
	partition.pl.in

2004-09-14  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in (xml_print_statichost): moved to network.pl.in
	* network.pl.in (network_xml_print_statichost): added
	* parse.pl.in: fixed a bug when searching in .ini like files, now
	it stops at the end of the section
	* share.pl.in, shares-conf.in: removed/comented unused code, made
	it safe to store info in modern systems, added the get_network_conf
	directive