@@ -1,3 +1,7 @@
+2004-11-05  Carlos Garcia Campos <carlosgc@gnome.org>
+
+	* disks-conf.in, partition.pl.in: added DVD support 
+
 2004-11-05  Link Dupont  <link.dupont@gmail.com>
 
 	* platform.pl.in: Added archlinux to the list
